# DigitalTwin_Heart

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  init.sql  init_db.sql  requirements.txt  run_dev.sh  sensor_mock.py  stress_test.py
01_Backend_Simulation/api/: database.py  main.py  models.py
01_Backend_Simulation/api/routes/: heart_routes.py
01_Backend_Simulation/core_logic/: physio_model.py
01_Backend_Simulation/data_processing/: anesthesia_model.onnx  feature_engineering.py  train_model.py  training_data.csv  vitaldb_fetcher.py
01_Backend_Simulation/simulation_engine/: worker.py
01_Backend_Simulation/tests/: conftest.py  test_api.py  test_heart_logic.py  test_integration.py  test_physics.py  test_resilience.py
01_Backend_Simulation/validation/: continuous_validation.py  science_validation.py
02_Database/terrain_data/: geneva_terrain.tif  summary.json
03_Visualization_Unity/Assets/Scripts/: HeartConnector.cs
05_Data_Ingestion/: Dockerfile  analyze_hrr.py  analyze_recovery.py  climate_fetcher.py  heart_data_ingestor.py  ingestor.py  terrain_fetcher.py
06_Rust_Inference/: Cargo.toml  Dockerfile
06_Rust_Inference/src/: main.rs
