[package]
name = "anesthesia_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web 
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }

# Para manejar JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The AI Engine in 100% Rust 
tract-onnx = "0.21.1"